# scroll-anchor

./: .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/skills/validate-real-cube/: SKILL.md
.github/: FUNDING.yml
configs/: default.yaml
docs/: coordinate_conventions.md  method.md
examples/: volume.npy
examples/surface/: x.tif  z.tif
results/analyze_demo/: diagnostics.json  review_regions.json
results/analyze_demo/arrays/: chosen_offset.npy  confidence.npy  correction_offset.npy  drift_score.npy  geom_offset.npy  review.npy  switch_score.npy
results/analyze_demo/surface/: mask.tif  sa_confidence.tif  sa_drift.tif  sa_review.tif  sa_switch.tif  y.tif
results/bench/: diagnostics.json  metrics.json  review_regions.json
results/bench/arrays/: correction_offset.npy  drift_score.npy  review.npy  switch_score.npy
results/bench/surface/: meta.json  sa_confidence.tif  sa_review.tif  sa_switch.tif  x.tif  (+2 more)
results/bench_corr/: diagnostics.json  metrics.json  review_regions.json
results/pherc-render/: README.md  metadata.json  regions.json  summary.json
results/real_cube_02256_02512_04816/: metrics.json
scripts/: run_benchmark.py  run_real_cube_benchmark.py
src/scroll_anchor/: __init__.py  cli.py  config.py  diagnostics.py  logging_setup.py  metrics.py  normals.py  nrrd_io.py  pipeline.py  previews.py  realcube.py  render2d.py  render_report.py  report.py  sampling.py  synth.py  tifxyz.py  volume.py
tests/: test_benchmark.py  test_nrrd_io.py  test_realcube.py  test_render2d.py  test_sampling.py  test_tifxyz.py
(+19 files in other folders)
